--- a/app/views/start_end_medicines/new.html.erb
+++ b/app/views/start_end_medicines/new.html.erb
@@ -1,9 +1,9 @@
 <h1>New start end medicine</h1>
-
 <%= render "form", start_end_medicine: @start_end_medicine %>
-
 <br>
-
 <div>
   <%= link_to "Back to start end medicines", start_end_medicines_path %>
+</div>
+<div>
+  <%= <%= link_to "Back to the medicine", medicines_path %>
 </div>
