--- a/app/views/start_end_medicines/index.html.erb
+++ b/app/views/start_end_medicines/index.html.erb
@@ -4,7 +4,7 @@
   <%# <% @start_end_medicines.each do |start_end_medicine| %>
     <%= render @start_end_medicines %>
     <p>
-      <%= link_to "Show this start end medicine", @start_end_medicine, class="btn btn-primary" %>
+      <%# <%= link_to "Show this start end medicine", @start_end_medicine, class="btn btn-primary" %> %>
     </p>
     <%# <% end %>
   </div>
