--- a/app/views/medicines/_form.html.erb
+++ b/app/views/medicines/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
   <div>
     <%= form.label :medicine_image, style: "display: block" %>
-    <%= form.file_field :image %>
+    <%= form.text_field :image %>
   </div>
   <div>
     <%= form.submit %>
