--- a/app/views/medicines/new.html.erb
+++ b/app/views/medicines/new.html.erb
@@ -1,9 +1,6 @@
 <h1>New medicine</h1>
-
 <%= render "form", medicine: @medicine %>
-
 <br>
-
 <div>
-  <%= link_to "Back to medicines", medicines_path %>
+  <%= link_to "Start and Ending Time",  new_medicine_start_end_medicine_path %>
 </div>
