--- a/app/views/time_to_eats/_form.html.erb
+++ b/app/views/time_to_eats/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_with(model: time_to_eat) do |form| %>
+<%= form_with(model: @time_to_eat, url: medicine_time_to_eats_path(@medicine_id), local: true) do |form| %>
   <% if time_to_eat.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(time_to_eat.errors.count, "error") %> prohibited this time_to_eat from being saved:</h2>
-
       <ul>
         <% time_to_eat.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,17 +9,10 @@
       </ul>
     </div>
   <% end %>
-
   <div>
     <%= form.label :time_to_eat, style: "display: block" %>
     <%= form.time_field :time_to_eat %>
   </div>
-
-  <div>
-    <%= form.label :medicine_id, style: "display: block" %>
-    <%= form.text_field :medicine_id %>
-  </div>
-
   <div>
     <%= form.submit %>
   </div>
