--- a/app/views/time_to_eats/new.html.erb
+++ b/app/views/time_to_eats/new.html.erb
@@ -1,9 +1,6 @@
 <h1>New time to eat</h1>
-
 <%= render "form", time_to_eat: @time_to_eat %>
-
 <br>
-
 <div>
-  <%= link_to "Back to time to eats", time_to_eats_path %>
+  <%= link_to "Back to time to eats", medicine_time_to_eats_path %>
 </div>
