Update the render page

--- a/app/views/medicines/_medicine.html.erb
+++ b/app/views/medicines/_medicine.html.erb
@@ -14,7 +14,7 @@
             <%= link_to "Edit this medicine", edit_medicine_path(medicine), class:"btn btn-outline-primary" %>
             <%= link_to "Back to medicines", medicines_path, class:"btn btn-outline-primary" %>
             <%= link_to "Check the start end", medicine_start_end_medicines_path(medicine), class:"btn btn-outline-primary" %>
-            <%= link_to "Check the start end", medicine_time_to_eats_path(medicine), class:"btn btn-outline-primary" %>
+            <%= link_to "Check the Time", medicine_time_to_eats_path(medicine), class:"btn btn-outline-primary" %>
             <%= button_to "Destroy this medicine", medicine, method: :delete, class:"btn btn-outline-danger mt-4" %>
           </div>
         </div>
