--- a/app/views/medicines/new.html.erb
+++ b/app/views/medicines/new.html.erb
@@ -2,5 +2,5 @@
 <%= render "form", medicine: @medicine %>
 <br>
 <div>
-  <%= link_to "Start and Ending Time",  new_medicine_start_end_medicine_path %>
+  <%# <%= link_to "Start and Ending Time",  new_medicine_start_end_medicine_path(@medicine.id) %> %>
 </div>
