--- a/app/views/start_end_medicines/new.html.erb
+++ b/app/views/start_end_medicines/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New start end medicine</h1>
-<%= render "form", start_end_medicine: @start_end_medicine %>
+<%= render "form", start_end_medicine: @start_end_medicine, medicine: @medicine %>
 <br>
 <div>
   <%= link_to "Back to start end medicines", medicine_start_end_medicines_path(@medicine), class:"btn btn-outline-primary" %>
