--- a/app/views/time_to_eats/new.html.erb
+++ b/app/views/time_to_eats/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New time to eat</h1>
-<%= render "form", time_to_eat: @time_to_eat %>
+<%= render "form", time_to_eat: @time_to_eat, medicine: @medicine %>
 <br>
 <div>
   <%= link_to "Back to time to eats", medicine_time_to_eats_path %>
