--- a/app/views/medicines/index.html.erb
+++ b/app/views/medicines/index.html.erb
@@ -1,3 +1,6 @@
+<div class="d-flex justify-content-end my-2 mx-2">
+  <%= link_to "New medicine", new_medicine_path, class: "btn btn-primary" %>
+</div>
 <div class="grid" data-controller="push" data-application-server-key="<%= Rails.application.credentials.dig(:Webpush, :public_key) %>">
   <div id="medicines" class="row row-cols-lg-4 row-cols-md-2 ml-5 mx-auto">
     <% @medicines.each do |medicines| %>
@@ -12,4 +15,3 @@
     Send a Message
   </button>
 </div>
-<%= link_to "New medicine", new_medicine_path %>
