--- a/app/views/navbar/_index.html.erb
+++ b/app/views/navbar/_index.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,12 +25,11 @@
       </ul>
       <div class="d-flex justify-content-end">
         <% if user %>
-          <%# <button class= type="button">Sign Out</button> %>
           <%= button_to(
             "Sign Out",
             destroy_user_session_path,
             method: :delete,
-            class: "btn btn-outline-success"
+            class: "btn btn-outline-danger"
           ) %>
         <% else %>
           <%# <button class= type="button">Sign Up</button> %>
