--- a/app/views/medicines/_form.html.erb
+++ b/app/views/medicines/_form.html.erb
@@ -1,30 +1,45 @@
-<%= form_with(model: medicine, id: "#{dom_id(medicine)}_form") do |form| %>
-  <% if medicine.errors.any? %>
-    <div style="color: red" class="alert alert-primary" role="alert">
-      <ul>
-        <% medicine.errors.each do |error| %>
-          <li class="removeDot"><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<div class="col-md-6 p-4">
+  <%= form_with(model: @medicine, id: "#{dom_id(@medicine)}_form", local: true) do |form| %>
+    <% if @medicine.errors.any? %>
+      <div style="color: red" class="alert alert-primary" role="alert">
+        <ul>
+          <% @medicine.errors.each do |error| %>
+            <li class="removeDot"><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <h1 class="text-center py-5" style="color:#888787; font-weight:bold;">New medicine</h1>
+    <div class="mb-3">
+      <%= form.label :medicine_name, style: "display: block", class:"d-none" %>
+      <%= form.text_field :medicine_name,
+       class: "form-control",
+       style: "color:#666; border:none; border-bottom:2px solid #e6e6e6; border-radius:none",
+       placeholder: "Enter Medicine Name" %>
+    </div>
+    <div class="mb-3">
+      <%= form.label :use_for, style: "display: block", class: "d-none" %>
+      <%= form.text_field :use_for,
+             class: "form-control",
+             style: "color:#666; border:none; border-bottom:2px solid #e6e6e6; border-radius:none",
+             placeholder: "Enter Use For" %>
+    </div>
+    <div class="mb-3">
+      <%= form.label :medicine_mg, style: "display: block", class: "d-none" %>
+      <%= form.number_field :medicine_mg,
+             class: "form-control",
+             style: "color:#666; border:none; border-bottom:2px solid #e6e6e6; border-radius:none",
+             placeholder: "Enter Medicine MG" %>
+    </div>
+    <div class="mb-3">
+      <%= form.label :medicine_image, style: "display: block", class: "d-none" %>
+      <%= form.text_field :image,
+             class: "form-control",
+             style: "color:#666; border:none; border-bottom:2px solid #e6e6e6; border-radius:none",
+             placeholder: "Enter Image URL" %>
+    </div>
+    <div class="mt-3">
+      <%= form.submit "Submit", class: "btn btn-primary" %>
     </div>
   <% end %>
-  <div>
-    <%= form.label :medicine_name, style: "display: block" %>
-    <%= form.text_field :medicine_name %>
-  </div>
-  <div>
-    <%= form.label :use_for, style: "display: block" %>
-    <%= form.text_field :use_for %>
-  </div>
-  <div>
-    <%= form.label :medicine_mg, style: "display: block" %>
-    <%= form.number_field :medicine_mg %>
-  </div>
-  <div>
-    <%= form.label :medicine_image, style: "display: block" %>
-    <%= form.text_field :image %>
-  </div>
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
