--- a/app/views/start_end_medicines/_form.html.erb
+++ b/app/views/start_end_medicines/_form.html.erb
@@ -1,28 +1,34 @@
-<%= form_with(model: [@medicine, start_end_medicine],id: "#{dom_id(start_end_medicine)}_form", local: true) do |form| %>
-  <% if start_end_medicine.errors.any? %>
-    <div class="error-messages">
-      <h2><%= pluralize(start_end_medicine.errors.count, "error") %> prohibited this start_end_medicine from being saved:</h2>
-      <ul>
-        <% start_end_medicine.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div>
-    <%= form.label :start_date, style: "display: block" %>
-    <%= form.date_field :start_date %>
+<div class="d-flex justify-content-center">
+  <div class="card w-100 p-4">
+    <%= form_with(model: [medicine, start_end_medicine], id: "#{dom_id(start_end_medicine)}_form", local: true) do |form| %>
+      <% if start_end_medicine.errors.any? %>
+        <div class="alert alert-danger">
+          <h2><%= pluralize(start_end_medicine.errors.count, "error") %> prohibited this start_end_medicine from being saved:</h2>
+          <ul>
+            <% start_end_medicine.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <h1 class="text-center py-5" style="color:#888787; font-weight:bold;">
+        Start and End Date
+      </h1>
+      <div>
+        <%= form.label :start_date, style: "display: block" %>
+        <%= form.date_field :start_date, class: "form-control" %>
+      </div>
+      <div>
+        <%= form.label :end_date, style: "display: block" %>
+        <%= form.date_field :end_date, class: "form-control" %>
+      </div>
+      <div>
+        <%= form.label :everyday, style: "display: block" %>
+        <%= form.check_box :everyday %>
+      </div>
+      <div class="mt-3">
+        <%= form.submit "Next", class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
-  <div>
-    <%= form.label :end_date, style: "display: block" %>
-    <%= form.date_field :end_date %>
-  </div>
-  <div>
-    <%= form.label :everyday, style: "display: block" %>
-    <%= form.check_box :everyday %>
-  </div>
-  <%# <%= form.field_for :time_to_eat, @medicine.time_to_eat %> %>
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
