--- a/app/views/medicines/edit.html.erb
+++ b/app/views/medicines/edit.html.erb
@@ -1,10 +1,24 @@
-<h1>Editing medicine</h1>
+<%# <h1 class="text-center py-5" style="color:#888787; font-weight:bold;">Edit medicine</h1>
+<div class="d-flex w-100 justify-content-center">
+  <%= render "form", medicine: @medicine, css: "md-w-100" %>
+<%# </div> %>
+<%# <br> %>
 
-<%= render "form", medicine: @medicine %>
-
-<br>
-
-<div>
-  <%= link_to "Show this medicine", @medicine %> |
-  <%= link_to "Back to medicines", medicines_path %>
+<section style="background-color:#f9f6f1;" class="min-vh-100">
+  <h1 class="text-center py-5" style="color:#888787; font-weight:bold;">Edit medicine</h1>
+<div class="d-flex justify-content-center align-items-center">
+  <div class="card w-75">
+    <div class="row g-0">
+      <div class="col-md-6 d-flex justify-content-center align-items-center">
+        <!-- Placeholder for Medicine Image -->
+        <img
+         src="https://plus.unsplash.com/premium_photo-1668487826871-2f2cac23ad56?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bWVkaWNpbmV8ZW58MHx8MHx8fDA%3D" 
+         alt="Medicine Image"
+         class="img-fluid object-fit-fill border rounded w-100 h-100"
+        />
+      </div>
+      <%= render "form", medicine: @medicine %>
+    </div>
+  </div> 
 </div>
+</section>
