--- a/app/views/medicines/new.html.erb
+++ b/app/views/medicines/new.html.erb
@@ -1,11 +1,12 @@
-<section style="background-color:#f9f6f1;">
-<div class="d-flex justify-content-center align-items-center min-vh-100">
+<section class="min-vh-100">
+  <h1 class="text-center py-5" style="color:#888787; font-weight:bold;">New medicine</h1>
+<div class="d-flex justify-content-center align-items-center">
   <div class="card w-75">
     <div class="row g-0">
       <div class="col-md-6 d-flex justify-content-center align-items-center">
         <!-- Placeholder for Medicine Image -->
         <img
-         src="https://images.unsplash.com/photo-1532938911079-1b06ac7ceec7?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fG1lZGljaW5lfGVufDB8fDB8fHww" 
+         src="https://images.pexels.com/photos/139398/thermometer-headache-pain-pills-139398.jpeg?auto=compress&cs=tinysrgb&w=600" 
          alt="Medicine Image"
          class="img-fluid object-fit-fill border rounded w-100 h-100"
         />
