--- a/app/views/start_end_medicines/edit.html.erb
+++ b/app/views/start_end_medicines/edit.html.erb
@@ -1,10 +1,7 @@
-<h1>Editing start end medicine</h1>
-
-<%= render "form", start_end_medicine: @start_end_medicine %>
-
-<br>
-
-<div>
-  <%= link_to "Show this start end medicine", @start_end_medicine %> |
-  <%= link_to "Back to start end medicines", start_end_medicines_path %>
-</div>
+<section class="d-flex w-100 justify-content-center min-vh-50 align-items-center">
+  <%= render "form",
+   start_end_medicine: @start_end_medicine,
+    medicine: @medicine,
+     header: "Editing start end medicine",
+     button: "Submit" %>
+</section>
