--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -11,9 +11,9 @@
   <% if devise_mapping.confirmable? && controller_name != 'confirmations' %>
     <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: 'link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover' %>
   <% end %>
-  <% if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-    <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: 'link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover' %>
-  <% end %>
+  <%# <% if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+    <%# <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: 'link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover' %>
+  <%# <% end %> 
   <% if devise_mapping.omniauthable? %>
     <% resource_class.omniauth_providers.each do |provider| %>
       <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'btn btn-outline-primary', data: { turbo: false } %>
