--- a/app/views/time_to_eats/_time_to_eats.html.erb
+++ b/app/views/time_to_eats/_time_to_eats.html.erb
@@ -1,5 +1,7 @@
 <% time_to_eats.each do | time_to_eat | %>
-  <div id="<%= dom_id time_to_eat %>" class="p-3 rounded-pill d-flex justify-content-center align-item-center" style="width:8rem; height:fit-content; flex:0.9 0.4 auto; background:rgb(180, 194, 206);">
+  <div 
+  id="<%= dom_id time_to_eat %>"
+   class="p-3 rounded-pill d-flex justify-content-center align-item-center" style="width:8rem; height:fit-content; flex:0 0 auto; background:rgb(180, 194, 206);">
     <p style="width:max-content;">
       <%# <strong>Time to eat:</strong> %>
       <%= time_to_eat.time_to_eat.strftime("%H:%M:%p") %>
