--- a/app/views/medicines/_form.html.erb
+++ b/app/views/medicines/_form.html.erb
@@ -18,10 +18,11 @@
     </div>
     <div class="mb-3">
       <%= form.label :use_for, style: "display: block", class: "d-none" %>
-      <%= form.text_field :use_for,
+      <%= form.text_area :use_for,
              class: "form-control",
              style: "color:#666; border:none; border-bottom:2px solid #e6e6e6; border-radius:none",
-             placeholder: "Enter Use For" %>
+             placeholder: "Enter Use For",
+             size: "50*10" %>
     </div>
     <div class="mb-3">
       <%= form.label :medicine_mg, style: "display: block", class: "d-none" %>
@@ -32,10 +33,13 @@
     </div>
     <div class="mb-3">
       <%= form.label :medicine_image, style: "display: block", class: "d-none" %>
-      <%= form.text_field :image,
+      <%# <%= form.text_field :image,
              class: "form-control",
              style: "color:#666; border:none; border-bottom:2px solid #e6e6e6; border-radius:none",
              placeholder: "Enter Image URL" %>
+      <%= form.file_field :image, 
+        class: "form-control form-control-sm"
+      %>
     </div>
     <div class="mt-3">
       <%= form.submit "Submit", class: "btn btn-primary" %>
