--- a/app/views/start_end_medicines/_form.html.erb
+++ b/app/views/start_end_medicines/_form.html.erb
@@ -12,7 +12,7 @@
         </div>
       <% end %>
       <h1 class="text-center py-5" style="color:#888787; font-weight:bold;">
-        <%= header || "Start and End Date" %>
+        Start and End Date
       </h1>
       <div>
         <%= form.label :start_date, style: "display: block" %>
@@ -22,12 +22,8 @@
         <%= form.label :end_date, style: "display: block" %>
         <%= form.date_field :end_date, class: "form-control" %>
       </div>
-      <div>
-        <%= form.label :everyday, style: "display: block" %>
-        <%= form.check_box :everyday %>
-      </div>
       <div class="mt-3 d-flex justify-content-center w-100">
-        <%= form.submit "#{button}", class: "btn btn-primary" %>
+        <%= form.submit :Submit, class: "btn btn-primary" %>
       </div>
     <% end %>
   </div>
