--- a/app/views/start_end_medicines/new.html.erb
+++ b/app/views/start_end_medicines/new.html.erb
@@ -1,8 +1,5 @@
-<%= render "form", start_end_medicine: @medicine_start_end_medicines, medicine: @medicine, header: "Start and End Date" %>
+<%= render "form", start_end_medicine: @medicine_start_end_medicines, medicine: @medicine%>
 <br>
-<div>
-  <%= link_to "Back to start end medicines", medicine_start_end_medicines_path(@medicine), class:"btn btn-outline-primary" %>
-</div>
 <div>
   <%= link_to "Back to medicines", medicines_path, class:"btn btn-outline-primary" %>
 </div>
