--- a/app/views/time_to_eats/_form.html.erb
+++ b/app/views/time_to_eats/_form.html.erb
@@ -5,7 +5,7 @@ class="text-center py-5"
 style="color:#888787; font-weight:bold;">
       Time
     </h1>
-    <div data-controller="nested-form" id="<%= dom_id(@medicine) %>_form">
+    <div data-controller="nested-form" id="<%= dom_id(@medicine) %>_form" class="mb-3">
       <template data-nested-form-target="template">
         <div class="nested-fields mb-3" id="nested-fields">
           <input type="hidden" name="medicine[time_to_eats_attributes][][user_id]" value="<%= @medicine.user_id %>"/>
@@ -23,7 +23,7 @@ style="color:#888787; font-weight:bold;">
             <input type="time" name="medicine[time_to_eats_attributes][][time_to_eat]" class="form-control" />
           </div>
         </div>
-        <button type="button" data-action="nested-form#addForm" class="btn btn-secondary mb-3">Add more Time</button>
+        <button type="button" data-action="nested-form#addForm" class="btn btn-secondary">Add more Time</button>
         <input type="submit" value="Add Time" class="btn btn-primary" />
       </form>
     </div>
